--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/toutiao?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/toutiao?serverTimezone=GMT&useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
-mybatis.config-location=classpath:mybatis-config.xml
+#spring.freemarker.suffix=.html
+server.servlet.context-path=
 server.port=80
-#server.servlet.context-path=/hackernews
-spring.velocity.cache=false
-spring.velocity.suffix=.html
-spring.velocity.toolbox-config-location=toolbox.xml
+server.address=localhost
+mybatis.config-location=classpath:mybatis-config.xml
